+ #62: ``pyg bundle`` failed when it did not find links on PyPI. Thanks to Fabien Devaux.
+ #63: Pyg could not install packages which use distutils instead of setuptools. Thanks to Fabien Devaux.
+ #64: Fixed ``pyg install --user``.
+ #66: ``pyg install -d {dir}`` could be ineffective.
+ #68: Now you can install local directories in development mode with the :option:`install -e` option.

0.6 (May 15, 2011)
------------------

+ #40: Now Pyg can install packages from URL even if the URL does not end with a file-extension.
+ #44: Added a :option:`install --ignore` option.
+ #45: Replaced :attr:`pkgtools.WorkingSet` with :attr:`pkg_resources.working_set` in :class:`pyg.inst.Updater`.
+ #46: Added two new global command-line option: :option:`-d, --debug` and :option:`--verbose`.
+ #47: The Updater is now faster and searches links on ``http://pypi.python.org/simple`` too.
+ #48: Implement a special uninstallation system for :class:`pyg.inst.Updater`.
+ #53: Show download progress.
+ #55: You can install packages from Github Gists!

0.5.2 (May 05, 2011)
--------------------

+ Fixed package installation from VCS.

0.5.1 (May 05, 2011)
--------------------

+ Fixed :file:`setup.py`: added the ``zip-safe`` flag.

0.5 (May 05, 2011)
--------------------

+ #29: Create bundles from requirements files.
+ #30: Keep track of why requirements are needed.
+ #31: Replace :command:`uninstall` and :command:`rm` with a new :command:`remove` command.
+ #32: Follow links in :file:`dependency_links.txt` file.
+ #33: Fix option :option:`--index-url`.
+ #34: ``pyg remove yourself``.
+ #36: Add ``virtualenv`` support.
+ #38: Add :option:`-A, --upgrade-all` option for the :command:`install` command.
+ #39: Add :option:`-e, --exclude` option for the :command:`bundle` command.

0.4.1 (May 01, 2011)
--------------------

+ Fixed an issue with the :mod:`subprocess` module.

0.4 (May 01, 2011)
--------------------

+ #19: Added :class:`pyg.inst.Bundler`: now Pyg can create bundles!